# totally-optimized-calculator-generator

./: Cargo.toml  README.md
benches/: benchmarks.rs
old_code/: first_code.py
src/: main.rs  utils.rs
